# simple-gtk4-calculator

./: .gitignore  README.md  meson.build  org.gnome.Example.json
data/: org.gnome.Example.desktop.in  org.gnome.Example.gschema.xml
po/: meson.build
src/: main.py  meson.build  simple-gtk4-calculator.in  window.py  window.ui
